--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   google_nav_bar: ^5.0.7
   shared_preferences: ^2.0.0
   curved_navigation_bar: ^1.0.0
+  firebase_core: ^3.10.0
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
