--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
+  flutter_html: ^3.0.0-alpha.6
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.0
+  geolocator: ^10.0.0
 
 dev_dependencies:
   flutter_test:
