--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   flutter_map: ^7.0.2
   latlong2: ^0.9.0
-  geolocator: ^10.0.0
+  geolocator: ^11.0.0
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
