--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   latlong2: ^0.9.0
   geolocator: ^11.0.0
   geocoding: ^2.1.0
+  firebase_messaging: ^15.2.0
 
 dev_dependencies:
   flutter_test:
