Enhance profile management and notification features
- Added profile editing functionality in ProfileScreen, allowing users to update their username, email, and password with Firestore integration.
- Implemented Firebase messaging for background notifications and local notifications upon tweet creation in TweetScreen.
- Updated pubspec.lock and pubspec.yaml to include new dependencies for flutter_local_notifications.
- Modified AndroidManifest.xml to add necessary permissions for notifications.
- Enabled core library desugaring in build.gradle for compatibility with newer Java features.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <!-- Izin untuk membuka URL di aplikasi eksternal -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:label="tubes"
         android:name="${applicationName}"
