--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,6 +14,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -39,6 +40,11 @@ android {
         }
     }
 }
+dependencies {
+       // Add this line to enable core library desugaring
+       coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+       // Other dependencies...
+   }
 
 flutter {
     source = "../.."
